fixed header overlap issue on interests page, added bootstrap classes

--- a/styles.css
+++ b/styles.css
@@ -247,4 +247,5 @@ i.fa.fa-twitter-square {
 .interests_bio {
   padding-left: 10px;
   padding-bottom: 20px;
+  padding-top: 150px;
 }
